{
  "version": 4,
  "terraform_version": "1.1.6",
  "serial": 46,
  "lineage": "6eb81de9-b9ee-83dc-0cec-6988093431b0",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "application-load-balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:390413509960:loadbalancer/app/my-application-load-balancer/7b3d2721ca0d37a1",
            "arn_suffix": "app/my-application-load-balancer/7b3d2721ca0d37a1",
            "desync_mitigation_mode": "defensive",
            "dns_name": "my-application-load-balancer-1782515100.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:390413509960:loadbalancer/app/my-application-load-balancer/7b3d2721ca0d37a1",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "my-application-load-balancer",
            "security_groups": [
              "sg-06e0c9eb589af9afe"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0766a2d3589c97234"
              },
              {
                "subnet_id": "subnet-094b35c8c985868c6"
              }
            ],
            "subnets": [
              "subnet-0766a2d3589c97234",
              "subnet-094b35c8c985868c6"
            ],
            "tags": {
              "Name": "application load balancer"
            },
            "tags_all": {
              "Name": "application load balancer"
            },
            "vpc_id": "vpc-010a8bf5f800a8d1f",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.alb-security-group",
            "aws_subnet.public-subnet-1",
            "aws_subnet.public-subnet-2",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip-for-nat-gateway-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02a333fa7362d1f64",
            "association_id": "eipassoc-0dcbd2394af231161",
            "domain": "vpc",
            "id": "eipalloc-02a333fa7362d1f64",
            "network_border_group": "us-east-1",
            "network_interface": "eni-07d57ebe403397e14",
            "private_dns": "ip-10-0-0-107.ec2.internal",
            "private_ip": "10.0.0.107",
            "public_dns": "ec2-18-210-197-117.compute-1.amazonaws.com",
            "public_ip": "18.210.197.117",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "EIP 1"
            },
            "tags_all": {
              "Name": "EIP 1"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip-for-nat-gateway-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0db6a18afab76d3b2",
            "association_id": "eipassoc-07c1bc8de442058cd",
            "domain": "vpc",
            "id": "eipalloc-0db6a18afab76d3b2",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0c5bfde17b1ad3116",
            "private_dns": "ip-10-0-1-191.ec2.internal",
            "private_ip": "10.0.1.191",
            "public_dns": "ec2-3-218-109-177.compute-1.amazonaws.com",
            "public_ip": "3.218.109.177",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "EIP 2"
            },
            "tags_all": {
              "Name": "EIP 2"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "elasticip-network",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c038e4af5e774ebf",
            "associate_with_private_ip": "10.0.0.254",
            "association_id": "eipassoc-05dd3b46b02af576a",
            "domain": "vpc",
            "id": "eipalloc-0c038e4af5e774ebf",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0d78d61ba1e6225b8",
            "private_dns": "ip-10-0-0-254.ec2.internal",
            "private_ip": "10.0.0.254",
            "public_dns": "ec2-100-24-251-65.compute-1.amazonaws.com",
            "public_ip": "100.24.251.65",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.internet-gateway",
            "aws_network_interface.web-server1",
            "aws_security_group.alb-security-group",
            "aws_security_group.ssh-security-group",
            "aws_security_group.webserver-security-group",
            "aws_subnet.public-subnet-1",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "my-web-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-033b95fb8079dc481",
            "arn": "arn:aws:ec2:us-east-1:390413509960:instance/i-0d7f42974807e43bc",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d7f42974807e43bc",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "my-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-03d91f4b42f4454d7",
            "private_dns": "ip-10-0-2-24.ec2.internal",
            "private_ip": "10.0.2.24",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-05ed68b5d32aea8c4",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09209e775fa1f41fc",
            "tags": {
              "Name": "My Web Server Terraform"
            },
            "tags_all": {
              "Name": "My Web Server Terraform"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0ea04f284da66a552"
            ]
          },
          "dependencies": [
            "aws_security_group.alb-security-group",
            "aws_security_group.ssh-security-group",
            "aws_security_group.webserver-security-group",
            "aws_subnet.private-subnet-1",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:390413509960:internet-gateway/igw-013d2d483a1eacb37",
            "id": "igw-013d2d483a1eacb37",
            "owner_id": "390413509960",
            "tags": {
              "Name": "Test IGW"
            },
            "tags_all": {
              "Name": "Test IGW"
            },
            "vpc_id": "vpc-010a8bf5f800a8d1f"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "alb-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:390413509960:listener/app/my-application-load-balancer/7b3d2721ca0d37a1/3b58a0ef0636363e",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:390413509960:listener/app/my-application-load-balancer/7b3d2721ca0d37a1/3b58a0ef0636363e",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:390413509960:loadbalancer/app/my-application-load-balancer/7b3d2721ca0d37a1",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb.application-load-balancer",
            "aws_security_group.alb-security-group",
            "aws_subnet.public-subnet-1",
            "aws_subnet.public-subnet-2",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "alb-target-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:390413509960:targetgroup/my-web-servers/df6dd476234a8354",
            "arn_suffix": "targetgroup/my-web-servers/df6dd476234a8354",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200,302",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:390413509960:targetgroup/my-web-servers/df6dd476234a8354",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "my-web-servers",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-010a8bf5f800a8d1f"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat-gateway-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02a333fa7362d1f64",
            "connectivity_type": "public",
            "id": "nat-07a6815f8e789f020",
            "network_interface_id": "eni-07d57ebe403397e14",
            "private_ip": "10.0.0.107",
            "public_ip": "18.210.197.117",
            "subnet_id": "subnet-094b35c8c985868c6",
            "tags": {
              "Name": "Nat Gateway Public Subnet 1"
            },
            "tags_all": {
              "Name": "Nat Gateway Public Subnet 1"
            }
          },
          "dependencies": [
            "aws_eip.eip-for-nat-gateway-1",
            "aws_subnet.public-subnet-1",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat-gateway-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0db6a18afab76d3b2",
            "connectivity_type": "public",
            "id": "nat-0ddc2e97bcb8fd8e8",
            "network_interface_id": "eni-0c5bfde17b1ad3116",
            "private_ip": "10.0.1.191",
            "public_ip": "3.218.109.177",
            "subnet_id": "subnet-0766a2d3589c97234",
            "tags": {
              "Name": "Nat Gateway Public Subnet 2"
            },
            "tags_all": {
              "Name": "Nat Gateway Public Subnet 2"
            }
          },
          "dependencies": [
            "aws_eip.eip-for-nat-gateway-2",
            "aws_subnet.public-subnet-2",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-route-table-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:390413509960:route-table/rtb-09af38a89b03e4b15",
            "id": "rtb-09af38a89b03e4b15",
            "owner_id": "390413509960",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-07a6815f8e789f020",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Private Route Table"
            },
            "tags_all": {
              "Name": "Private Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-010a8bf5f800a8d1f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip-for-nat-gateway-1",
            "aws_nat_gateway.nat-gateway-1",
            "aws_subnet.public-subnet-1",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:390413509960:route-table/rtb-056b18095b45b6338",
            "id": "rtb-056b18095b45b6338",
            "owner_id": "390413509960",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-013d2d483a1eacb37",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public Route Table"
            },
            "tags_all": {
              "Name": "Public Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-010a8bf5f800a8d1f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.internet-gateway",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-subnet-1-route-table-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-082f1b3eede7e16a1",
            "route_table_id": "rtb-09af38a89b03e4b15",
            "subnet_id": "subnet-09209e775fa1f41fc"
          },
          "dependencies": [
            "aws_eip.eip-for-nat-gateway-1",
            "aws_nat_gateway.nat-gateway-1",
            "aws_route_table.private-route-table-1",
            "aws_subnet.private-subnet-1",
            "aws_subnet.public-subnet-1",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-subnet-2-route-table-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-082f1b3eede7e16a1",
            "route_table_id": "rtb-09af38a89b03e4b15",
            "subnet_id": "subnet-09209e775fa1f41fc"
          },
          "dependencies": [
            "aws_eip.eip-for-nat-gateway-1",
            "aws_nat_gateway.nat-gateway-1",
            "aws_route_table.private-route-table-1",
            "aws_subnet.private-subnet-1",
            "aws_subnet.public-subnet-1",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-subnet-1-route-table-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07531f63825fcce9b",
            "route_table_id": "rtb-056b18095b45b6338",
            "subnet_id": "subnet-094b35c8c985868c6"
          },
          "dependencies": [
            "aws_internet_gateway.internet-gateway",
            "aws_route_table.public-route-table",
            "aws_subnet.public-subnet-1",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-subnet-2-route-table-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f46a8e662bcfe300",
            "route_table_id": "rtb-056b18095b45b6338",
            "subnet_id": "subnet-0766a2d3589c97234"
          },
          "dependencies": [
            "aws_internet_gateway.internet-gateway",
            "aws_route_table.public-route-table",
            "aws_subnet.public-subnet-2",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb-security-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:390413509960:security-group/sg-06e0c9eb589af9afe",
            "description": "Enable HTTP/HTTPS access on Port 80/443",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06e0c9eb589af9afe",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP Access",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS Access",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "ALB Security Group",
            "name_prefix": "",
            "owner_id": "390413509960",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ALB Security Group"
            },
            "tags_all": {
              "Name": "ALB Security Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-010a8bf5f800a8d1f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh-security-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:390413509960:security-group/sg-0c22bd8bc38787e88",
            "description": "Enable SSH access on Port 22",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c22bd8bc38787e88",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH Access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "SSH Security Group",
            "name_prefix": "",
            "owner_id": "390413509960",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SSH Security Group"
            },
            "tags_all": {
              "Name": "SSH Security Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-010a8bf5f800a8d1f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "webserver-security-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:390413509960:security-group/sg-0ea04f284da66a552",
            "description": "Enable HTTP/HTTPS access on Port 80/443 via ALB and SSH access on Port 22 via SSH SG",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ea04f284da66a552",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "HTTP Access",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-06e0c9eb589af9afe"
                ],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "HTTPS Access",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-06e0c9eb589af9afe"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "SSH Access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c22bd8bc38787e88"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Web Server Security Group",
            "name_prefix": "",
            "owner_id": "390413509960",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Web Server Security Group"
            },
            "tags_all": {
              "Name": "Web Server Security Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-010a8bf5f800a8d1f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb-security-group",
            "aws_security_group.ssh-security-group",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:390413509960:subnet/subnet-09209e775fa1f41fc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09209e775fa1f41fc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "390413509960",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private Subnet 1"
            },
            "tags_all": {
              "Name": "Private Subnet 1"
            },
            "vpc_id": "vpc-010a8bf5f800a8d1f"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:390413509960:subnet/subnet-0a97f8c54a18dea8a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a97f8c54a18dea8a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "390413509960",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private Subnet 2"
            },
            "tags_all": {
              "Name": "Private Subnet 2"
            },
            "vpc_id": "vpc-010a8bf5f800a8d1f"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:390413509960:subnet/subnet-094b35c8c985868c6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-094b35c8c985868c6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "390413509960",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public Subnet 1"
            },
            "tags_all": {
              "Name": "Public Subnet 1"
            },
            "vpc_id": "vpc-010a8bf5f800a8d1f"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:390413509960:subnet/subnet-0766a2d3589c97234",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0766a2d3589c97234",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "390413509960",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public Subnet 2"
            },
            "tags_all": {
              "Name": "Public Subnet 2"
            },
            "vpc_id": "vpc-010a8bf5f800a8d1f"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:390413509960:vpc/vpc-010a8bf5f800a8d1f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0aad6a5bf789c63f4",
            "default_route_table_id": "rtb-0bcb8e9c0612548db",
            "default_security_group_id": "sg-07a1665e4a7404699",
            "dhcp_options_id": "dopt-049bc219d2e66a5f3",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-010a8bf5f800a8d1f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0bcb8e9c0612548db",
            "owner_id": "390413509960",
            "tags": {
              "Name": "Test VPC"
            },
            "tags_all": {
              "Name": "Test VPC"
            }
          }
        }
      ]
    }
  ]
}